# hr-assistant

00.HR_Assistant/: README.md  pyproject.toml
00.HR_Assistant/src/00/hr_assistant/: __init__.py
01.HR_Assistant/: pyproject.toml
01.HR_Assistant/src/00/hr_assistant/: __init__.py
02.HR_Assistant/: pyproject.toml
02.HR_Assistant/src/00/data/chromadb/: chroma.sqlite3
02.HR_Assistant/src/00/hr_assistant/: __init__.py  database.py  document_processor.py  utilis.py
03.HR_Assistant/resumes/: cv2.txt  cv4.txt  cv5.txt
03.HR_Assistant/src/00/data/chromadb/: chroma.sqlite3
03.HR_Assistant/src/00/hr_assistant/: __init__.py  database.py  document_processor.py  utilis.py
03.HR_Assistant/src/00/hr_assistant/resumes/: cv3.txt
04.HR_Assistant/: pyproject.toml
04.HR_Assistant/resumes/: cv1.txt  cv2.txt
04.HR_Assistant/src/00/data/chromadb/: chroma.sqlite3
04.HR_Assistant/src/00/hr_assistant/: __init__.py  document_processor.py  semantic_chunking.py
